Move the attribution to <footer>

--- a/style.css
+++ b/style.css
@@ -58,4 +58,10 @@ p {
 
 .attribution {
     margin-top: 20px;
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
